Fix NoReverseMatch error and update problem list UI

--- a/archive/templates/archive/problem_list.html
+++ b/archive/templates/archive/problem_list.html
@@ -89,8 +89,8 @@
             <a class="navbar-brand" href="{% url 'problem_list' %}">MATHFORCES</a>
             <div class="navbar-nav ms-auto">
                 <a class="nav-link active" href="{% url 'problem_list' %}">Archive</a>
-                <a class="nav-link" href="{% url 'ranking_view' %}">Ranking</a>
-                <a class="nav-link" href="{% url 'profile_view' %}">My Profile</a>
+                <a class="nav-link" href="{% url 'ranking' %}">Ranking</a>
+                <a class="nav-link" href="{% url 'profile' %}">My Profile</a>
             </div>
         </div>
     </nav>
